Agregando utilidades como paginación, ajustes de swagger, versionamiento

--- a/WebApiAuthors/WebApiAuthors.csproj
+++ b/WebApiAuthors/WebApiAuthors.csproj
@@ -5,6 +5,8 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>5e35d05f-8882-487a-820f-659c30123e41</UserSecretsId>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
